# ppopp

./: .gitignore  ARTIFACT.md  CLAUDE.md  CMakeLists.txt
data/: csr_anchors.txt
docs/: findings.md  sssp_experiment_status.md  sssp_findings_log.md
docs/design/: 00_paper22_overview.md  01_problem_thesis.md  02_paper_outline.md  03_experimental_design.md  04_timeline_milestones.md  05_risk_register.md  06_re0_runbook.md  07_re0_a10_interim.md  08_re0_decision.md
docs/sssp_artifact/: README.md  data_provenance.md  expected_outputs.md  hardware_requirements.md  replication_recipes.md
docs/sssp_ts/: 00_overview.md  01_sssp_and_emission.md  02_verifier.md  03_infrastructure.md
paper/manuscript/: draft_v5.md  draft_v6.md
results/_compare/: livejournal__a10_sm86_seed0__a10_sm86_seed1.json  livejournal__a10_sm86_seed0__a10_sm86_seed2.json  livejournal__a10_sm86_seed0__a10_sm86_seed3.json  livejournal__a10_sm86_seed0__a10_sm86_seed4.json  livejournal__a10_sm86_seed0__mi300x_vf_seed0.json  livejournal__a10_sm86_seed0__mi300x_vf_seed1.json  livejournal__a10_sm86_seed0__mi300x_vf_seed2.json  livejournal__a10_sm86_seed0__mi300x_vf_seed3.json  livejournal__a10_sm86_seed0__mi300x_vf_seed4.json  livejournal__a10_sm86_seed1__a10_sm86_seed2.json  livejournal__a10_sm86_seed1__a10_sm86_seed3.json  livejournal__a10_sm86_seed1__a10_sm86_seed4.json  livejournal__a10_sm86_seed1__mi300x_vf_seed0.json  livejournal__a10_sm86_seed1__mi300x_vf_seed1.json  livejournal__a10_sm86_seed1__mi300x_vf_seed2.json  livejournal__a10_sm86_seed1__mi300x_vf_seed3.json  livejournal__a10_sm86_seed1__mi300x_vf_seed4.json  livejournal__a10_sm86_seed2__a10_sm86_seed3.json  livejournal__a10_sm86_seed2__a10_sm86_seed4.json  livejournal__a10_sm86_seed2__mi300x_vf_seed0.json  livejournal__a10_sm86_seed2__mi300x_vf_seed1.json  livejournal__a10_sm86_seed2__mi300x_vf_seed2.json  livejournal__a10_sm86_seed2__mi300x_vf_seed3.json  livejournal__a10_sm86_seed2__mi300x_vf_seed4.json  livejournal__a10_sm86_seed3__a10_sm86_seed4.json  livejournal__a10_sm86_seed3__mi300x_vf_seed0.json  livejournal__a10_sm86_seed3__mi300x_vf_seed1.json  livejournal__a10_sm86_seed3__mi300x_vf_seed2.json  livejournal__a10_sm86_seed3__mi300x_vf_seed3.json  livejournal__a10_sm86_seed3__mi300x_vf_seed4.json  livejournal__a10_sm86_seed4__mi300x_vf_seed0.json  livejournal__a10_sm86_seed4__mi300x_vf_seed1.json  livejournal__a10_sm86_seed4__mi300x_vf_seed2.json  livejournal__a10_sm86_seed4__mi300x_vf_seed3.json  livejournal__a10_sm86_seed4__mi300x_vf_seed4.json  livejournal__mi300x_vf_seed0__mi300x_vf_seed1.json  livejournal__mi300x_vf_seed0__mi300x_vf_seed2.json  livejournal__mi300x_vf_seed0__mi300x_vf_seed3.json  livejournal__mi300x_vf_seed0__mi300x_vf_seed4.json  livejournal__mi300x_vf_seed1__mi300x_vf_seed2.json  (+128 more)
results/_compare/fp32/: as-skitter__a10_sm86_seed0__a10_sm86_seed1.json  as-skitter__a10_sm86_seed0__a10_sm86_seed2.json  as-skitter__a10_sm86_seed0__a10_sm86_seed3.json  as-skitter__a10_sm86_seed0__a10_sm86_seed4.json  as-skitter__a10_sm86_seed1__a10_sm86_seed2.json  as-skitter__a10_sm86_seed1__a10_sm86_seed3.json  as-skitter__a10_sm86_seed1__a10_sm86_seed4.json  as-skitter__a10_sm86_seed2__a10_sm86_seed3.json  as-skitter__a10_sm86_seed2__a10_sm86_seed4.json  as-skitter__a10_sm86_seed3__a10_sm86_seed4.json  livejournal__a10_sm86_seed0__a10_sm86_seed1.json  livejournal__a10_sm86_seed0__a10_sm86_seed2.json  livejournal__a10_sm86_seed0__a10_sm86_seed3.json  livejournal__a10_sm86_seed0__a10_sm86_seed4.json  livejournal__a10_sm86_seed0__mi300x_vf_seed0.json  livejournal__a10_sm86_seed0__mi300x_vf_seed1.json  livejournal__a10_sm86_seed0__mi300x_vf_seed2.json  livejournal__a10_sm86_seed0__mi300x_vf_seed3.json  (+147 more)
results/a10_sm86/: livejournal_seed0.json  livejournal_seed1.json  livejournal_seed2.json  livejournal_seed3.json  livejournal_seed4.json  rmat-22_seed0.json  rmat-22_seed1.json  rmat-22_seed2.json  rmat-22_seed3.json  rmat-22_seed4.json  web-google_seed0.json  web-google_seed1.json  web-google_seed2.json  web-google_seed3.json  web-google_seed4.json  web-google_seed5.json  web-google_seed6.json  web-google_seed7.json
results/mi300x_vf/: livejournal_seed0.json  livejournal_seed1.json  livejournal_seed2.json  livejournal_seed3.json  livejournal_seed4.json  rmat-22_seed0.json  rmat-22_seed1.json  rmat-22_seed2.json  rmat-22_seed3.json  rmat-22_seed4.json  web-google_seed0.json  web-google_seed1.json  web-google_seed2.json  web-google_seed3.json  web-google_seed4.json
scripts/: _a10_extend_batch.sh  _mi300x_batch.sh  compare_all.sh  gen_rmat.py  re0_summary.py  run_full_paper.sh  run_re0.sh  run_re2e_re3.sh  run_re2e_v2.sh  snap_to_csr.py  snap_to_dimacs.py
scripts/sssp/: a06_tolerance_analysis.py  cross_vendor_compare_f26ext.py  csr_to_mtx.py  cugraph_sssp_audit.py  dispatch_all.sh  fetch_datasets.sh  gr_to_mtx.py  inject_and_verify.py  offline_a1_14_15.py  offline_a1_17.py  offline_a1_20.py  patch_rmat22.sh  run_e1.sh  run_e2.sh  run_e3.sh  run_e4.sh  run_e5.sh  run_e6.sh  run_e7.sh  run_e8.sh  run_e9.sh  run_phase1.sh  run_phases_2_to_5.sh  snap_to_dimacs.py  summarize_f26_extension.py  sync_data_tables.py
src/analysis/: coverage_compare.py  drift_compare.py  make_figures.py  overhead_summary.py
src/common/: crc32.h
src/core/: csr_pagerank.h  csr_sssp.h  hip_cuda_compat.h
src/harness/: error_injector.cpp  error_injector.h  log_writer.cpp  log_writer.h  main.cpp
src/io/: csr_io.cpp  csr_io.h  dimacs_loader.cpp  dimacs_loader.h  gap_loader.cpp  gap_loader.h  rmat_generator.cpp  rmat_generator.h  snap_loader.cpp  snap_loader.h
src/pagerank/: pagerank.hip  pagerank_pull.hip  pagerank_pull_v2.hip
src/sssp/: async_push_sssp.h  async_push_sssp.hip  bellman_ford.h  bellman_ford.hip  cpu_delta_stepping.cpp  cpu_delta_stepping.h  cpu_dijkstra.cpp  cpu_dijkstra.h  delta_stepping.h  delta_stepping.hip  gpu_atomics.hpp  tiebreak.h
src/verifier/: cpu_verifier.cpp  cpu_verifier.h  invariants.h
tests/: test_csr.cpp  test_csr_io.cpp  test_delta_stepping_cpu.cpp  test_dijkstra_small.cpp  test_verifier_soundness.cpp
(+145 files in other folders)
